--- a/src/main/resources/lru/linmul/map.html
+++ b/src/main/resources/lru/linmul/map.html
@@ -8,49 +8,54 @@
 <body>
 <div id="map" style="width: 100%; height: 100vh;"></div>
 <script>
-    var map;
-    var markers = [];
+    let map;
+    let markers = [];
 
     function initMap() {
-        map = L.map('map').setView([46.1611582, -1.1529412], 11);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        map = L.map( 'map', {
+            maxBounds: L.latLngBounds( L.latLng( 46.06, -1.30 ), L.latLng( 46.26, -1.00 ) ),
+            maxBoundsViscosity: 0.3
+        }).setView( [ 46.16, -1.15 ], 11 );
+
+        L.tileLayer( 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 19,
             minZoom: 11,
-        }).addTo(map);
+        }).addTo( map );
     }
 
-    function addMarker(lat, lng, popupText) {
-        var customIcon = L.icon({
+    function addMarker( lat, lng, popupText ) {
+        let customIcon = L.icon({
             iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png',
-            iconSize: [25, 41],
-            iconAnchor: [12, 41],
-            popupAnchor: [1, -34],
+            iconSize: [ 25, 41 ],
+            iconAnchor: [ 12, 41 ],
+            popupAnchor: [ 1, -34 ],
             shadowUrl: 'https://unpkg.com/leaflet/dist/images/marker-shadow.png',
-            shadowSize: [41, 41]
+            shadowSize: [ 41, 41 ]
         });
 
-        var marker = L.marker([lat, lng], { icon: customIcon }).addTo(map);
-        marker.bindPopup(popupText);
-        marker.on('click', function() {
-            alert('markerClick:' + popupText);
+        let marker = L.marker( [ lat, lng ], { icon: customIcon } ).addTo( map );
+        marker.bindPopup( popupText );
+        marker.on( 'click', function() {
+            alert( 'markerClick:' + popupText );
         });
-        markers.push(marker);
+
+        markers.push( marker );
     }
 
     function clearMarkers() {
-        for (var i = 0; i < markers.length; i++) {
-            map.removeLayer(markers[i]);
+        for (let i = 0; i < markers.length; i++) {
+            map.removeLayer( markers[i] );
         }
         markers = [];
     }
 
-    function selectMarker(lat, lng) {
-        let marker = markers.find(marker => marker.getLatLng().lat === lat && marker.getLatLng().lng === lng);
+    function selectMarker( lat, lng ) {
+        let marker = markers.find( marker => marker.getLatLng().lat === lat && marker.getLatLng().lng === lng );
         marker.openPopup();
-        map.setView([lat, lng], 13)
+        map.setView( [ lat, lng ], 13 )
     }
 
-    document.addEventListener('DOMContentLoaded', initMap);
+    document.addEventListener( 'DOMContentLoaded', initMap );
 </script>
 </body>
 </html>
